--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "antd": "^5.9.4",
     "apexcharts": "^3.42.0",
     "axios": "^1.5.1",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
